# MyDiscord

./: .gitignore  CMakeLists.txt  main.cpp
Client/include/: VoiceClient.hpp
Client/src/: VoiceClient.cpp  main.cpp
Networking/: CMakeLists.txt
Networking/include/: NetworkClient.h  NetworkClient.hpp  NetworkConnection.h  NetworkConnection.hpp  NetworkMessage.h  NetworkMessage.hpp  NetworkQueue.h  NetworkQueue.hpp  NetworkServer.h  NetworkServer.hpp
Networking/src/: NetworkClient.cpp  NetworkQueue.cpp  NetworkServer.cpp
Server/include/: VoiceServer.h  VoiceServer.hpp
Server/src/: VoiceServer.cpp  main.cpp
Shared/: Messages.hpp
